--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,9 +11,9 @@
     <!-- Custom CSS --> 
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-    <script src="{{site.baseurl}}js/prism.js"></script>
-    <link rel="stylesheet" type="text/css" href="{{site.baseurl}}css/prism.css">
-    <link rel="stylesheet" type="text/css" href="{{site.baseurl}}css/main.css">
+    <script src="{{site.url}}{{site.baseurl}}js/prism.js"></script>
+    <link rel="stylesheet" type="text/css" href="{{site.url}}{{site.baseurl}}css/prism.css">
+    <link rel="stylesheet" type="text/css" href="{{site.url}}{{site.baseurl}}css/main.css">
 
   </head>
 
@@ -23,7 +23,7 @@
  
         <div class="row">
           <div class="col-xs-2 logo-container">
-            <img src="{{site.baseurl}}media/ePANDDA_logo_NOtext.jpg" class="img-responsive" style="height: 85px; width: 85px;">
+            <img src="{{site.url}}{{site.baseurl}}media/ePANDDA_logo_NOtext.jpg" class="img-responsive" style="height: 85px; width: 85px;">
           </div>
           <div class="col-xs-10 logo-container text-left">GSA Tech Discussion</div>
         </div>
